syntax = "proto3";

package room;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum Orientation {
	None      = 0;
	Up        = 1;
	UpRight   = 2;
	Right     = 3;
	DownRight = 4;
	Down      = 5;
	DownLeft  = 6;
	Left      = 7;
	UpLeft    = 8;
}

message Cell {
    bytes ID                     = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    map<int32, bytes> Contiguous = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    bytes Tilemap                = 3 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    int64 X                      = 4;
    int64 Y                      = 5;
}

message WorldCell {
    bytes WorldID                = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    bytes CellID                 = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    int64 X                      = 3;
    int64 Y                      = 4;
}
